# AshenDB

./: .gitignore  LICENSE  README.rst  pyproject.toml  setup.py  test.py
.github/: dependabot.yml
ashendb/: __init__.py  client.py  collection.py  database.py  document.py  exception.py  helper.py
docs/: requirements.txt
docs/source/: ashendb.client.rst  ashendb.exception.rst  conf.py  folder_structure.txt  index.rst
docs/source/_static/css/: overwrite.css
